Fixing layout issue.

--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/gallerydialog.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/gallerydialog.css
@@ -1,4 +1,4 @@
-@external html-face, cmsState;
+@external html-face, cmsState, previewVisible, gwt-TabLayoutPanel;
 
 div.editorGallery{
 	box-shadow: none;
@@ -35,6 +35,10 @@ div.parentPanel div.criteriaList {
     position: absolute;
     right: 6px;
     top: 41px;
+}
+
+div.parentPanel.previewVisible > div.gwt-TabLayoutPanel{
+	visibility:hidden;
 }
 
 div.selectboxWidth {
