--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/previewdialog.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/previewdialog.css
@@ -1,4 +1,6 @@
-@external hidePreview;
+@external hidePreview, previewVisible;
+
+.previewVisible{}
 
 /* The height and width are set as inline style. */
 div.previewDialog {
